ready for sec defence
